[tool.poetry]
name = "my_krml_14367914"
version = "0.1.2"
description = "package for avml"
authors = ["Panalee Makha"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
